--- a/Index/Views/TextureView.xaml
+++ b/Index/Views/TextureView.xaml
@@ -1,16 +1,12 @@
-﻿<UserControl x:Class="Index.Views.TextureView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Index.Views"
-             xmlns:models="clr-namespace:Index.Models"
-             xmlns:controls="clr-namespace:Index.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-
-    </UserControl.Resources>
+﻿<local:View x:Class="Index.Views.TextureView"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+            xmlns:local="clr-namespace:Index.Views"
+            xmlns:vm="clr-namespace:Index.ViewModels"
+            mc:Ignorable="d" 
+            d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*" />
@@ -21,42 +17,12 @@
                Grid.Column="0"
                Source="{Binding Path=SelectedTexture.ImageData}" />
 
-        <ListView x:Name="TextureThumbnails"
+        <!--<ListView x:Name="TextureThumbnails"
                   Grid.Column="1"
+                  Background="#10FFFFFF"
                   ItemsSource="{Binding Images}"
                   SelectedItem="{Binding SelectedTexture, Mode=OneWayToSource}"
                   VirtualizingPanel.IsContainerVirtualizable="True"
-                  VirtualizingPanel.IsVirtualizing="True">
-            <ListView.Template>
-                <ControlTemplate TargetType="{x:Type ListView}">
-                    <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="1" SnapsToDevicePixels="true">
-                            <ScrollViewer Focusable="false" Padding="{TemplateBinding Padding}">
-                                <ItemsPresenter x:Name="PART_ListItemsPresenter" 
-                                            MaxWidth="{Binding ElementName=TextureThumbnails,Path=ActualWidth}"
-                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            </ScrollViewer>
-                        </Border>
-                </ControlTemplate>
-            </ListView.Template>
-            <!--<ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>-->
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Width="{Binding ElementName=PART_ListItemsPresenter,Path=ActualWidth}" >
-
-                        <Image Grid.Column="0"
-                               Margin="0"
-                               HorizontalAlignment="Left"
-                               Source="{Binding ImageData}"
-                               Stretch="UniformToFill"/>
-                        
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                  VirtualizingPanel.IsVirtualizing="True" />-->
     </Grid>
-</UserControl>
+</local:View>
