--- a/Index/Modals/MessageModal.xaml
+++ b/Index/Modals/MessageModal.xaml
@@ -1,62 +1,19 @@
-﻿<local:HostedModal x:Class="Index.Modals.MessageModal"
-                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                   xmlns:local="clr-namespace:Index.Modals"
-                   mc:Ignorable="d" 
-                   d:DesignHeight="450" d:DesignWidth="800">
+﻿<local:WindowedModal x:Class="Index.Modals.MessageModal"
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                     xmlns:local="clr-namespace:Index.Modals"
+                     mc:Ignorable="d" 
+                     d:DesignHeight="450" d:DesignWidth="800">
+    
     <Grid>
+        <TextBlock x:Name="MessageLabel" 
+                   Text="Message"
+                   FontSize="14"
+                   TextWrapping="WrapWithOverflow"
+                   Margin="10,10,10,25" />
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="4*" MaxWidth="450" />
-            <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
-
-        <StackPanel Grid.Column="1" 
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Center"
-                    Background="#2B2B2B">
-            <StackPanel.Effect>
-                <DropShadowEffect BlurRadius="25" 
-                                  ShadowDepth="3" 
-                                  Direction="270" 
-                                  Opacity=".75" 
-                                  Color="#000"/>
-            </StackPanel.Effect>
-
-            <Label x:Name="TitleLabel" 
-                   Content="Title"
-                   FontWeight="Bold"
-                   FontSize="15"
-                   Padding="10,5"
-                   Background="#60000000">
-                <Label.Effect>
-                    <DropShadowEffect BlurRadius="10" 
-                                      ShadowDepth="1" 
-                                      Direction="270" 
-                                      Opacity=".75" 
-                                      Color="#000"/>
-                </Label.Effect>
-            </Label>
-
-            <TextBlock x:Name="MessageLabel" 
-                       Text="Message"
-                       FontSize="14"
-                       TextWrapping="WrapWithOverflow"
-                       Margin="10,10,10,25" />
-
-            <StackPanel x:Name="ButtonPanel" 
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Right">
-                
-                <!--<Button Padding="10,5" 
-                        Margin="5"
-                        Content="Ok" />-->
-                
-            </StackPanel>
-            
-        </StackPanel>
     </Grid>
-</local:HostedModal>
+    
+</local:WindowedModal>
