--- a/Index/UI/Styles/Controls.Button.xaml
+++ b/Index/UI/Styles/Controls.Button.xaml
@@ -13,6 +13,10 @@
     <SolidColorBrush x:Key="Button.Disabled.Foreground"  Color="{DynamicResource Color.Foreground.Disabled}"/>
     <SolidColorBrush x:Key="Button.Defaulted.Border"     Color="{DynamicResource Color.Primary.2.Border.Static}"/>
 
+    <Style x:Key="DefaultButtonStyle" 
+           TargetType="{x:Type Button}" 
+           BasedOn="{StaticResource {x:Type Button}}" />
+
     <Style TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{DynamicResource FocusVisual}" />
         <Setter Property="Background" Value="{DynamicResource Button.Static.Background}" />
@@ -21,7 +25,8 @@
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Padding" Value="1" />
+        <Setter Property="Margin" Value="2" />
+        <Setter Property="Padding" Value="3" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
