--- a/Index/UI/Converters/Converters.xaml
+++ b/Index/UI/Converters/Converters.xaml
@@ -7,5 +7,6 @@
     <converters:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
     <converters:CollectionVisibilityConverter x:Key="CollectionVisibilityConverter" />
     <converters:IntVisibilityConverter x:Key="IntVisibilityConverter" />
+    <converters:NullVisibilityConverter x:Key="NullVisibilityConverter" />
 
 </ResourceDictionary>
